# SDL2-triangle

./: CMakeLists.txt  README.md  main.cpp  sdl2_util.cpp  sdl2_util.h
